@@ -9,6 +9,8 @@ Changes in version 0.10
 
 - Blocked access to files outside of the spool in bcron-spool.
 
+- Added debug messages to bcron-exec.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
